docs: 리드미 수정, api documentation 추가